ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncClass_es6/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncClass_es6/input.ts:3:7
  |
3 | async class C {  
  |       ^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncClass_es6/input.ts:3:1
  |
3 | async class C {  
  | ^^^^^

